[package]
name = "solcron-keeper"
version = "0.1.0"
edition = "2021"
description = "SolCron Keeper Node - Monitors and executes automation jobs"

[[bin]]
name = "keeper"
path = "src/main.rs"

[dependencies]
# Solana dependencies
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
solana-client = "1.18.0"
solana-sdk = "1.18.0"
solana-program = "1.18.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json"] }

# WebSocket for real-time updates
tokio-tungstenite = "0.20"

# Crypto
bs58 = "0.5"

# Metrics and monitoring
prometheus = "0.13"