[package]
name = "solcron-execution"
version = "0.1.0"
description = "SolCron Execution Engine - Handles cross-program invocation for automation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcron_execution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"